--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+:root {
+  --primary-color: #FFFFFF;
+  --primary-contrast-color: #ffffff;
+
+  --secondary-color: #034833;
+
+  --background-color: #FFFFFF;
+
+  --font-size: 16px;
+  --primary-font-family:'Plus Jakarta Sans', sans-serif;
+  --secondary-font-family: 'ABeeZee', sans-serif;
+
+  --max-width-section: 1290px;
+
+  --width-breakpoint-to-portatil: 1200px;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: var(--font-family);
+}
+
+*::selection {
+  color: white;
+  background: var(--primary-color);  
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: "Ubuntu", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; 
+
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+  background-color: var(--background-color);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body .display-none {
+  display: none;
 }
